--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,1 +1,11 @@
+# Automatically created by: scrapy startproject
+#
+# For more information about the [deploy] section see:
+# http://doc.scrapy.org/topics/scrapyd.html
 
+[settings]
+default = eraven_sample01.settings
+
+[deploy]
+#url = https://eraven.franklinpierce.edu/
+project = eraven_sample01
