--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,11 +1,11 @@
 # Automatically created by: scrapy startproject
 #
 # For more information about the [deploy] section see:
-# http://doc.scrapy.org/topics/scrapyd.html
+# https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = eraven_sample01.settings
+default = eravencrawl.settings
 
 [deploy]
-#url = https://eraven.franklinpierce.edu/
-project = eraven_sample01
+#url = http://localhost:6800/
+project = eravencrawl
